FIX: Legger til historikk for endret inntekt, stardato og opphør (#470)
* FIX: Legger til historikk for endret inntekt, stardato og opphør

* ung-sak.openapi.json updated by build pipeline 


skip-checks:true

* FIX: Støtter flere endringer

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>